--- a/css/module.css
+++ b/css/module.css
@@ -1,5 +1,7 @@
 #pageTitle{
     background: none;
+    width: 90%;
+    margin-left: 3%;
     outline: none;
     margin-bottom: 3%;
     margin-top: 3%;
@@ -22,7 +24,7 @@
     padding: 30px 0px;
     clear: both;
 }
-.divHeight125 {
+.divCD {
     height: 25px;
     padding: 50px 0px;
 }
@@ -33,12 +35,14 @@
 }
 .halfWidth {
     width: 50%;
-    height: 250px;
+    height: 20px;
+    padding: 115px 0px;
     float: left;
 }
 .halfWidthRight {
     width: 50%;
-    height: 250px;
+    height: 20px;
+    padding: 115px 0px;
     float: left;
 }
 .halfWidthSection {
