gave each box a different color and changed them for desktop v mobile

--- a/css/layout.css
+++ b/css/layout.css
@@ -1,5 +1,6 @@
 div {
     background: rgb(216,216,216);
-    outline: 1px rgb(169, 169, 169) solid;
+    outline: 1px rgb(143, 82, 82) solid;
     text-align: center;
+    color: white;
 }
