--- a/css/module.css
+++ b/css/module.css
@@ -18,20 +18,23 @@
 #divA {
     height: 15px;
     padding: 30px 0px;
+    background-color: rgb(241, 89, 89);
 }
 #divI {
     height: 20px;
     padding: 30px 0px;
     clear: both;
+    background-color: rgb(112, 29, 91);
 }
 .divCD {
     height: 25px;
     padding: 50px 0px;
+    background-color: rgb(237, 240, 96);
 }
 #divB {
     height: 20px;
     padding: 65px 0px;
-    
+    background-color: rgb(236, 136, 77);
 }
 .halfWidth {
     width: 50%;
@@ -54,4 +57,25 @@
     height: 50px;
     outline: none;
     background: none;
+}
+#divC{
+    background-color: yellow;
+    color: rgb(78, 32, 32);
+}
+#divD{
+    background-color: limegreen;
+}
+#divE{
+    background-color: rgb(93, 212, 216);
+}
+#divF {
+    background-color: rgb(83, 196, 224);
+}
+#divG{
+    color: white;
+    background-color: rgb(22, 22, 172);
+}
+#divH{
+    color: white;
+    background-color: rgb(14, 14, 177);
 }
