--- a/css/base.css
+++ b/css/base.css
@@ -4,3 +4,8 @@ body{
     color: rgb(100,100,100);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+#bottomPaddingDiv{
+    height: 50px;
+    outline: none;
+    background: none;
+}
