--- a/css/module.css
+++ b/css/module.css
@@ -1,74 +1,52 @@
 #pageTitle{
     background: none;
     width: 90%;
-    margin-left: 5%;
-    outline: none;
-    margin-bottom: 3%;
-    margin-top: 3%;
+    margin: auto;
     text-align: left;
     font: 12pt Calibri, sans-serif;
+    padding: 15px;
 }
-
 #mainDiv {
     background: none;
+    border: none;
     outline: none;    
     width: 90%;
     margin: auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 #divA {
     height: 15px;
+    width: 100%;
     padding: 30px 0px;
     background-color: rgb(231, 35, 35);
 }
-#divI {
+#divB {
     height: 20px;
-    padding: 30px 0px;
-    clear: both;
-    background-color: rgb(112, 29, 91);
+    width: 100%;
+    padding: 65px 0px;
+    background-color: rgb(245, 114, 39);
+}
+#divC{
+    width: 100%;
+    background-color: yellow;
+    color: rgb(78, 32, 32);
+}
+#divD{
+    width: 100%;
+    background-color: limegreen;
+    color: rgb(78, 32, 32);
 }
 .divCD {
     height: 25px;
     padding: 50px 0px;
     background-color: rgb(237, 240, 96);
 }
-#divB {
-    height: 20px;
-    padding: 65px 0px;
-    background-color: rgb(245, 114, 39);
-}
-.halfWidth {
-    width: 50%;
-    height: 20px;
-    padding: 115px 0px;
-    float: left;
-}
-.halfWidthRight {
-    width: 50%;
-    height: 20px;
-    padding: 115px 0px;
-    float: left;
-}
-.halfWidthSection {
-    outline: none;
-    background: none;
-    align-content: center;
-}
-#bottomPaddingDiv{
-    height: 50px;
-    outline: none;
-    background: none;
-}
-#divC{
-    background-color: yellow;
-    color: rgb(78, 32, 32);
-}
-#divD{
-    background-color: limegreen;
-    color: rgb(78, 32, 32);
-}
 #divE{
     background-color: rgb(93, 212, 216);
     color: rgb(78, 32, 32);
+    border-right: none;
 }
 #divF {
     background-color: rgb(83, 196, 224);
@@ -76,7 +54,20 @@
 }
 #divG{
     background-color: rgb(22, 22, 172);
+    border-right: none;
 }
 #divH{
     background-color: rgb(14, 14, 177);
+}
+.halfWidth {
+    width: 50%;
+    height: 20px;
+    padding: 115px 0px;
+}
+#divI {
+    width: 100%;
+    height: 20px;
+    padding: 30px 0px;
+    background-color: rgb(112, 29, 91);
+    border-bottom: 1px rgb(100, 97, 97) solid;
 }
