--- a/css/module.css
+++ b/css/module.css
@@ -15,6 +15,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    align-content: stretch;
 }
 #divA {
     height: 15px;
@@ -29,18 +30,16 @@
     background-color: rgb(245, 114, 39);
 }
 #divC{
-    width: 100%;
     background-color: yellow;
-    color: rgb(78, 32, 32);
 }
 #divD{
-    width: 100%;
     background-color: limegreen;
-    color: rgb(78, 32, 32);
 }
 .divCD {
+    width: 100%;
     height: 25px;
     padding: 50px 0px;
+    color: rgb(78, 32, 32);
     background-color: rgb(237, 240, 96);
 }
 #divE{
